First ios deploy

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -150,7 +150,7 @@ div[data-role="contentXXXX"]{
     font-weight: 400;
 }
 .my-page .ui-header {
-    color: #003D6C;
+    color: #ffffff;
 }
 .my-page .ui-footer {
     color: #666;
